Merged some cleanups from Turbine 2.3
git-svn-id: https://svn.apache.org/repos/asf/jakarta/turbine/fulcrum/trunk@526566 13f79535-47bb-0310-9956-ffa450edef68